...
        } label: {
            Image(systemName: isActive ? "chevron.up" : "chevron.down")
                .fontWeight(.semibold)
                .frame(maxWidth: .infinity)
                .postItemButtonStyle(isActive: isActive)
        }.buttonStyle(.borderless)
        .accessibilityIdentifier("comment_expand_button")
    }
}

// FeedItemButtonWithCount
// contains a button with a customizable label view and a count
struct ButtonWithCount<Content: View>: View {
...
